assets/css/style.css
body {
  background-color: black;
  min-height: min-content;
}

.hero,
.footer {
  font-size: 1em;
  font-family: "Alegreya Sans SC", Calibri, "Trebuchet MS", sans-serif;
  color: white;
}

#radiusMiles {
  color: white;
}

label {
  font-size: 25px;
}

.is-my-color {
  background-color: #6f000a !important;
}

a {
  color: white;
}

#results {
  display: grid;
  grid-template-columns: 1fr 1fr;
}

#map {
  display: flex;
  flex-direction: column;
  justify-content: right;
  margin: 2rem 0 2rem 0;
  max-height: 50rem;
}

#searchInputs {
  margin: 0 3vw;
}

@media screen and (max-width: 768px) {
  #results {
    display: flex;
    flex-direction: column;
  }
}

@media screen and (max-width: 1024px) {
  #map,
  #results {
    margin: 4vw;    
  }
}

